--- a/src/main/resources/templates/user/user-manage.html
+++ b/src/main/resources/templates/user/user-manage.html
@@ -62,7 +62,7 @@
                                 <div class="row">
                                     <div class="col-2 fs-1 ms-3 ps-1 rounded-4" style="background-color: rgb(163, 230, 53);"><i class="fa-solid fa-users" style="color:white;"></i></div>
                                     <div class="col-9 fs-1 ms-2 ps-0 text-center">
-                                        <span class="fs-1">143&nbsp;</span><span class="fs-4" style="color:rgb(203, 213, 225)">/&nbsp;명</span>
+                                        <span class="fs-1" id="totalUser" th:text="${userChartData.size()}">143</span><span class="fs-4" style="color:rgb(203, 213, 225)">&nbsp;/&nbsp;명</span>
                                     </div>
                                 </div>
                             </div>
@@ -74,7 +74,7 @@
                                 <div class="row">
                                     <div class="col-2 fs-1 ms-3 ps-3 me-0 pe-0 rounded" style="background-color: rgb(110, 231, 183);"><i class="fa-solid fa-percent" style="color : white;"></i></div>
                                     <div class="col-9 fs-1 ms-2 ps-0 text-center">
-                                        45<span class="fs-4" style="color:rgb(203, 213, 225)">%</span>
+                                        45<span class="fs-4" style="color:rgb(203, 213, 225)">명</span>
                                     </div>
                                 </div>
                             </div>
@@ -136,7 +136,8 @@
                     </div>
                 </div>
             </div>
-        </div>    </div>
+    </div>
+</div>
 </div>
 <script th:replace="fragment::search"></script>
 
