--- a/src/main/resources/templates/user/user-manage.html
+++ b/src/main/resources/templates/user/user-manage.html
@@ -74,7 +74,7 @@
                                 <div class="row">
                                     <div class="col-2 fs-1 ms-3 ps-3 me-0 pe-0 rounded" style="background-color: rgb(110, 231, 183);"><i class="fa-solid fa-percent" style="color : white;"></i></div>
                                     <div class="col-9 fs-1 ms-2 ps-0 text-center">
-                                        45<span class="fs-4" style="color:rgb(203, 213, 225)">명</span>
+                                        <span th:text="${userTodaySignUpCount}">45</span><span class="fs-4" style="color:rgb(203, 213, 225)">명</span>
                                     </div>
                                 </div>
                             </div>
