--- a/src/main/resources/templates/ai/ai-add.html
+++ b/src/main/resources/templates/ai/ai-add.html
@@ -164,7 +164,7 @@
         alert("데이터 길이가 300보다 작습니다.");
 
         // 이전 페이지로 되돌아가기
-        window.history.back();
+        //window.history.back();
     }
     function doFilter(){
 
@@ -174,7 +174,7 @@
         let url = `http://ceprj.gachon.ac.kr:60002/admin/ai/model/add/filter/${min}/${max}`;
         let localUrl = `http://localhost:60002/admin/ai/model/add/filter/${min}/${max}`;
 
-        fetch(url) // 데이터를 받아올 URL
+        fetch(localUrl) // 데이터를 받아올 URL
             .then(response => response.json()) // JSON 형식으로 응답을 파싱
             .then(data => {
                 const result = parseInt(data);
@@ -205,7 +205,7 @@
         let localUrl = `http://localhost:60002/admin/ai/model/learn`;
         let url = `http://ceprj.gachon.ac.kr:60002/admin/ai/model/learn`;
 
-        fetch(url) // 데이터를 받아올 URL
+        fetch(localUrl) // 데이터를 받아올 URL
             .then(response => response.text()) // JSON 형식으로 응답을 파싱
             .then(data => {
                 document.getElementById("spin").style.display = "none";
@@ -223,7 +223,7 @@
     function saveModel(){
         let localUrl = 'http://localhost:60002/admin/ai/model/add';
         let url = 'http://ceprj.gachon.ac.kr:60002/admin/ai/model/add';
-        fetch(url, {
+        fetch(localUrl, {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json'
