--- a/src/main/resources/templates/main/dashboard.html
+++ b/src/main/resources/templates/main/dashboard.html
@@ -245,6 +245,9 @@
 <script th:inline="javascript">
     const ctx1 = document.getElementById('myChart1');
 
+    let popularNodes = [[${top5Nodes}]];
+    alert(popularNodes);
+
     const data1 = {
         labels: ['3월 8일', '3월 9일', '3월 10일', '3월 11일', '3월 12일', '3월 13일', '3월 14일'],
         datasets: [{
