--- a/src/main/resources/templates/node/node-manage.html
+++ b/src/main/resources/templates/node/node-manage.html
@@ -230,29 +230,29 @@
         }
     });
 
-    const ctx2 = document.getElementById('myChart2');
-
-    let unSaNodeList = [[${unSatisfaction}]];
-    console.log(unSaNodeList);
-
-    new Chart(ctx2, {
-        type: 'bar',
-        data: {
-            labels: [123],
-            datasets: [{
-                label: '만족도 평균 하위 Top5',
-                data: [123],
-                borderWidth: 1
-            }]
-        },
-        options: {
-            scales: {
-                y: {
-                    beginAtZero: true
-                }
-            }
-        }
-    });
+    // const ctx2 = document.getElementById('myChart2');
+    //
+    // let unSaNodeList = [[${unSatisfaction}]];
+    // console.log(unSaNodeList);
+    //
+    // new Chart(ctx2, {
+    //     type: 'bar',
+    //     data: {
+    //         labels: [123],
+    //         datasets: [{
+    //             label: '만족도 평균 하위 Top5',
+    //             data: [123],
+    //             borderWidth: 1
+    //         }]
+    //     },
+    //     options: {
+    //         scales: {
+    //             y: {
+    //                 beginAtZero: true
+    //             }
+    //         }
+    //     }
+    // });
 </script>
 <script>
     function changeUp() {
